--- a/css/login.css
+++ b/css/login.css
@@ -135,3 +135,22 @@ h1 {
 .logoForm {
     height:70px;
 }
+
+.errorMsgDiv {
+    background-color: red;
+    position:fixed;
+    font-weight: bold;
+    color:whitesmoke;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px 50px;
+    top: -150px;
+    opacity: 0;
+    transition: 600ms ease-in-out, opacity 600ms ease-in-out;
+}
+
+.showErrorMsg {
+    opacity: 1;
+    top: 50px;
+    
+}
