--- a/css/chat.css
+++ b/css/chat.css
@@ -241,6 +241,7 @@ main {
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
     padding-left: 10px;
+    font-size: 15px;
 }
 
 #sendBtn {
